src/main/java/syntactic/test/failing/emptyExpression.ru
start {
	if () {
	}
}



/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 6 | Se esperaba expresión pero se encontró CLOSE_PAR: ) |